1. Cleaning of code. 2. DeLinting code.